# zorsh

./: .gitignore  CHANGELOG.md  README.md  biome.json  lefthook.yml  main.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.changeset/: add-native-enum.md  blue-snakes-love.md  bytes-helper-minor.md  cuddly-seas-turn.md  cyan-terms-sleep.md  eight-days-boil.md  five-lemons-kneel.md  heavy-shrimps-end.md  kind-apples-burn.md  metal-walls-bake.md  red-numbers-drum.md  silent-spoons-cheer.md  spotty-comics-warn.md  thin-bears-invent.md  vec-plain-arrays.md  wicked-waves-greet.md  yellow-penguins-fail.md
.github/workflows/: ci.yml  release.yml
rust/borsh_test/: Cargo.toml  generated_schema.ts
rust/borsh_test/src/: complex.rs  float_test.rs  lib.rs  schema.rs
src/: binary-io.ts  example.ts  index.ts  native-enum.ts  registry.ts  schema.ts  types.ts
src/generator/: README.md  generator.ts  index.ts  parser.ts  reader.ts  resolver.ts  types.ts
test/: bytes.test.ts  coverage.test.ts  edge-cases.test.ts  enum-integration.test.ts  lazy.test.ts  native-enum.test.ts  parser.test.ts  serialization.test.ts  tuples.test.ts  typed-arrays.test.ts
test/__snapshots__/: serialization.test.ts.snap
test/rust/: README.md  complex-schema.ts  complex-serialization.test.ts
tests/: serialization.test.ts
tests/__snapshots__/: serialization.test.ts.snap
